--- a/Plugins/Obituary/Obituary.properties
+++ b/Plugins/Obituary/Obituary.properties
@@ -1,3 +1,5 @@
+log_to_console=true
+log_to_twitter=false
 lava:<cc><player> fell into lava.
 water:<cc><player> has drowned.
 suffocate:<cc><player> has suffocated.
@@ -7,8 +9,8 @@ player:<cc><killer> killed <player> with a<n> <item>.
 ranged:<cc><killer> killed <player> with a<n> <item> at a range of <distance>m.
 skeleton:<cc>Skeleton killed <player> at a range of <distance>m.
 fall:<cc><player> fell to his death.
-fire_tick:<cc><player> burned to death.
-fire:<cc><player> fell into a fire.
+fire:<cc><player> burned to death.
 cactus:<cc><player> died to a cactus. Come on, really?
 explosion:<cc><player> died to an explosion.
 suicide:<cc><player> killed himself.
+void:<cc><player> fell into the abyss.
